# furiosa-opt

./: Cargo.toml  LICENSE  Makefile  NOTICE  README.md  THIRD-PARTY-LICENSES  about.hbs  about.toml
base-template/: Cargo.toml.liquid  cargo-generate.toml
book/: 404.html  hello-tcp.html  index.html  print.html  toc.html  (+12 more)
cargo-furiosa-opt/: Cargo.toml
cargo-furiosa-opt/src/: driver.rs
furiosa-mapping/: Cargo.toml  build.rs
furiosa-mapping-macro/: Cargo.toml
furiosa-mapping-macro/src/: lib.rs
furiosa-mapping-macro/src/parser/: lexer.rs  mod.rs  parser.lalrpop
furiosa-mapping-macro/tests/: trailing_comma.rs
furiosa-mapping-types/: Cargo.toml
furiosa-mapping-types/src/: lib.rs  sorted_map.rs
furiosa-mapping/src/: ext.rs  lib.rs  mapping.rs
furiosa-mapping/src/parser/: lexer.rs  mod.rs  parser.lalrpop
furiosa-opt-examples/: Cargo.toml
furiosa-opt-examples/src/: attention.rs  binary_add.rs  cluster_chip_shuffle_slice.rs  contract_outer_assertions.rs  fetch_assertions.rs  fetch_commit.rs  lib.rs  reshape.rs  scatter_gather.rs  switch_assertions.rs  tile.rs  transpose.rs  vector_engine.rs  view.rs  vrf_add.rs
furiosa-opt-examples/src/matmul/: matmul_16384.rs  matmul_4096.rs  matmul_chip_reduce.rs  matmul_cluster_reduce.rs  matmul_split_reduce.rs  matmul_split_reduce2.rs  matmul_wo_broadcast.rs  mod.rs
furiosa-opt-examples/src/mnist/: README.md  mnist.py  mod.rs  requirements.txt
furiosa-opt-examples/src/transformer/: axes.rs
furiosa-opt-examples/src/transformer/attention/: attn_output.rs  attn_weight.rs  kv_cache.rs  mod.rs  softmax.rs
furiosa-opt-examples/src/transformer/common/: mlp.rs  norm.rs  o_proj.rs  rope.rs
furiosa-opt-examples/src/transformer/decoder/: mod.rs
furiosa-opt-examples/src/transformer/embedding/: embedding.rs  mod.rs  proj.rs  rms_norm.rs
furiosa-opt-examples/src/transformer/head/: lm_head.rs  mod.rs
furiosa-opt-examples/src/vector_engine/: normal.rs  reduce.rs  zip.rs
furiosa-opt-examples/tests/: attention_tests.rs  binary_add_tests.rs  broadcast.rs  common.rs  contract_outer_assertions_tests.rs  fetch_assertions_tests.rs  fetch_commit_tests.rs  matmul_tests.rs  mnist_tests.rs  reshape_tests.rs  scatter_gather_tests.rs  shuffle_slice_tests.rs  switch_assertions_tests.rs  tile_tests.rs  transformer_tests.rs  transpose_tests.rs  vector_engine_tests.rs  view_tests.rs
furiosa-opt-examples/tests/vector_engine/: normal.rs  reduce.rs  zip.rs
furiosa-opt-macro/: Cargo.toml
furiosa-opt-macro/src/: lib.rs
furiosa-opt-std/: Cargo.toml  build.rs
furiosa-opt-std/src/: array_vec.rs  cast.rs  context.rs  float.rs  lib.rs  scalar.rs  tensor_state.rs
furiosa-opt-std/src/engine/: cast.rs  collect.rs  commit.rs  fetch.rs  mod.rs  switch.rs  transpose.rs
furiosa-opt-std/src/engine/contraction/: lane.rs  mod.rs  packet.rs  time.rs
furiosa-opt-std/src/engine/contraction/outer/: mod.rs  stream_adapter.rs  trf_sequencer.rs
furiosa-opt-std/src/engine/vector/: alu.rs  branch.rs  mod.rs  operand.rs  scalar.rs
furiosa-opt-std/src/engine/vector/op/: arg_mode.rs  has_alu.rs  mod.rs  semantics.rs
furiosa-opt-std/src/engine/vector/stage/: markers.rs  mod.rs  state.rs
furiosa-opt-std/src/engine/vector/tensor/: mod.rs  vector_tensor.rs  vector_tensor_pair.rs  verify.rs
furiosa-opt-std/src/runtime/: backend.rs  mod.rs  op_prep.rs
furiosa-opt-std/src/runtime/emulation/: backend.rs  mod.rs
furiosa-opt-std/src/runtime/npu/: backend.rs  convert.rs  ffi.rs  kernel.rs  mod.rs
furiosa-opt-std/src/runtime/simulation/: backend.rs  mod.rs
furiosa-opt-std/src/runtime/typecheck/: backend.rs  mod.rs
furiosa-opt-std/src/tensor/: memory.rs  mod.rs  pseudo.rs  raw.rs  tu.rs  view.rs
furiosa-opt-std/src/tensor/raw/: buf.rs  math.rs  phantom.rs
furiosa-visa-examples/: Cargo.toml
furiosa-visa-examples/data/mnist/: mnist.safetensors
furiosa-visa-examples/src/: aligner_assertions.rs  attention.rs  binary_add.rs  cluster_chip_shuffle_slice.rs  fetch_assertions.rs  fetch_commit.rs  lib.rs  reshape.rs  scatter_gather.rs  switch_assertions.rs  tile.rs  transpose.rs  vector_engine.rs  view.rs  vrf_add.rs
furiosa-visa-examples/src/matmul/: matmul_16384.rs  matmul_4096.rs  matmul_chip_reduce.rs  matmul_cluster_reduce.rs  matmul_split_reduce.rs  matmul_split_reduce2.rs  matmul_wo_broadcast.rs
furiosa-visa-examples/src/mnist/: README.md  mnist.py  mod.rs  requirements.txt
furiosa-visa-examples/src/transformer/: axes.rs  mod.rs
furiosa-visa-examples/src/transformer/attention/: attn_output.rs  attn_weight.rs  kv_cache.rs  mod.rs  softmax.rs
furiosa-visa-examples/src/transformer/common/: mlp.rs  mod.rs  norm.rs  o_proj.rs  rope.rs
furiosa-visa-examples/src/transformer/decoder/: mod.rs
furiosa-visa-examples/src/transformer/embedding/: embedding.rs  mod.rs  proj.rs  rms_norm.rs
furiosa-visa-examples/src/transformer/head/: lm_head.rs  mod.rs
furiosa-visa-examples/src/vector_engine/: normal.rs  reduce.rs  zip.rs
furiosa-visa-examples/tests/: aligner_assertions_tests.rs  attention_tests.rs  binary_add_tests.rs  broadcast.rs  fetch_assertions_tests.rs  fetch_commit_tests.rs  matmul_tests.rs  mnist_tests.rs  reshape_tests.rs  scatter_gather_test.rs  shuffle_slice_tests.rs  switch_assertions_tests.rs  tile_test.rs  transformer_tests.rs  transpose_tests.rs  view_tests.rs
furiosa-visa-examples/tests/common/: mod.rs
furiosa-visa-examples/tests/vector_engine/: mod.rs  normal.rs  reduce.rs  zip.rs
furiosa-visa-std/: AGENTS.md  Cargo.toml  build.rs
furiosa-visa-std/src/: cast.rs  context.rs  diag.rs  lib.rs  memory_tensor.rs  raw_tensor.rs  scalar.rs  stream_tensor.rs  tensor.rs  tensor_state.rs  tensor_view.rs
furiosa-visa-std/src/runtime/: backend.rs  convert.rs  kernel.rs  mod.rs
furiosa-visa-std/src/vector_engine/: alu.rs  branch.rs  layer.rs  mod.rs  operand.rs
furiosa-visa-std/src/vector_engine/op/: arg_mode.rs  has_alu.rs  mod.rs  semantics.rs
furiosa-visa-std/src/vector_engine/stage/: markers.rs  mod.rs  state.rs
furiosa-visa-std/src/vector_engine/tensor/: mod.rs  vector_tensor.rs  vector_tensor_pair.rs  verify.rs
(+3268 files in other folders)
