[workspace]
members = [
    "cargo-furiosa-opt",
    "furiosa-visa-examples",
    "furiosa-opt-macro",
    "furiosa-mapping-macro",
    "furiosa-mapping",
    "furiosa-visa-std",
]
resolver = "3"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(furiosa_opt)'] }

[workspace.dependencies]
abi_stable = "0.11"
anstream = "0.6"
anstyle = "1.0"
arrayvec = "0.7.6"
divisors_fixed = "0.4.0"
cfg-if = "1"
env_logger = "0.11"
f8 = "0.1.2"
half = { version = "2.7", features = ["num-traits"] }
itertools = "0.14.0"
lalrpop = "0.22.2"
lalrpop-util = "0.22.2"
lasso = { version = "0.7", features = ["multi-threaded"] }
log = "0.4"
ndarray = "0.17.1"
num-traits = "0.2.19"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9.2"
safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-lite = { version = "0.5", features = ["derive"] }
serde_json = "1"
smart-default = "0.7"
syn = { version = "2.0", features = ["full"] }
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "sync", "macros"] }

[patch.crates-io]
serde-lite = { git = "https://github.com/furiosa-ai/serde-lite", rev = "88136e4" }
