[workspace]
members = [
    "cargo-furiosa-opt",
    "furiosa-mapping",
    "furiosa-mapping-macro",
    "furiosa-mapping-types",
    "furiosa-opt-examples",
    "furiosa-opt-macro",
    "furiosa-opt-std",
]
resolver = "3"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(backend, values("simulation", "emulation", "npu", "typecheck"))'] }

[workspace.dependencies]
abi_stable = "0.11"
anstream = "0.6"
anstyle = "1.0"
arrayvec = { version = "0.7.6", features = ["serde"] }
bindgen = "0.71"
cfg-if = "1"
divisors_fixed = "0.4.0"
env_logger = "0.11"
f8 = "0.1.2"
half = { version = "2.3.1", features = ["num-traits"] }
itertools = "0.14.0"
lalrpop = "0.22.2"
lalrpop-util = "0.22.2"
lasso = { version = "0.7", features = ["multi-threaded"] }
libloading = "0.8"
log = "0.4"
ndarray = { version = "0.15.6", features = ["approx", "rayon", "serde"] }
num-traits = "0.2.16"
proc-macro2 = "1.0.66"
quote = "1.0"
rand = { version = "0.9.0", features = ["small_rng", "alloc"] }
safetensors = "0.4"
serde = { version = "1.0.175", features = ["derive", "rc"] }
serde-lite = { version = "0.5", features = ["derive", "preserve-order"] }
serde_json = { version = "1.0.103", features = ["float_roundtrip"] }
smart-default = "0.7.1"
syn = { version = "2.0", features = ["full"] }
tokio = { version = "1.29.1", features = ["full"] }

[patch.crates-io]
serde-lite = { git = "https://github.com/furiosa-ai/serde-lite", rev = "88136e4" }
