[package]
name = "furiosa-mapping-macro"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/furiosa-ai/furiosa-opt"
description = "Procedural macros for the Furiosa NPU mapping DSL."

[lib]
proc-macro = true

[dependencies]
lalrpop-util = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[build-dependencies]
lalrpop = { workspace = true }

[dev-dependencies]
furiosa-mapping = { path = "../furiosa-mapping", version = "0.2" }
