[package]
name = "furiosa-mapping-types"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
abi_stable.workspace = true
itertools.workspace = true
lasso.workspace = true
serde.workspace = true
serde-lite.workspace = true
furiosa-mapping-macro = { path = "../furiosa-mapping-macro" }

[dev-dependencies]
furiosa-opt-macro = { path = "../furiosa-opt-macro" }
