[package]
name = "furiosa-mapping"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/furiosa-ai/furiosa-opt"
description = "Public interface for the Furiosa NPU mapping DSL."


[dependencies]
abi_stable = { workspace = true }
furiosa-mapping-macro = { path = "../furiosa-mapping-macro", version = "0.2" }
furiosa-mapping-types = { path = "../furiosa-mapping-types", version = "0.2" }
furiosa-opt-macro = { path = "../furiosa-opt-macro", version = "0.2" }


[dev-dependencies]
serde_json = { workspace = true }
