[package]
name = "furiosa-opt-examples"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
furiosa-opt-std = { path = "../furiosa-opt-std", version = "0.2" }

[dev-dependencies]
env_logger = { workspace = true }
half = { workspace = true }
rand = { workspace = true }
safetensors = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
