[package]
name = "furiosa-visa-std"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
anstream.workspace = true
anstyle.workspace = true
arrayvec.workspace = true
f8.workspace = true
half.workspace = true
log.workspace = true
ndarray.workspace = true
num-traits.workspace = true
rand.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true

abi_stable.workspace = true
furiosa-opt-macro = { path = "../furiosa-opt-macro" }
furiosa-mapping-macro = { path = "../furiosa-mapping-macro" }
furiosa-mapping = { path = "../furiosa-mapping" }

libloading = "0.8"
tokio.workspace = true

[package.metadata.cargo-machete]
ignored = ["libloading"]

[build-dependencies]
bindgen = "0.71"
